# scaffold-kit

./: .coveragerc  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .scaffoldignore  .scaffoldkitrc.yaml  .tool-versions  .yamllint.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  bandit.yaml  fucs.html  hatch_build.py  index.html  license.html  make.bat  mkdocs.yaml  mypy.ini  objects.inv  pyproject.toml  pytest.ini  ruff.toml  sitemap.xml  taplo.toml
.github/workflows/: docs.yaml  package.yaml  release.yaml
docs/: fucs.md  index.md  license.md
docs/assets/stylesheets/: extra.css
docs/checklists/: empty-files-checklist.txt
docs/guides/: dynamic-versioning-with-python-quick-setup-guide.md  git-guide.md  git-workflow-guide-branches.md
docs/reference/: checklist.md  config.md  ignore_parser.md  index.md  init.md  main.md  pattern_processor.md  scaffold.md  string_utils.md  tree.md
docs/trees/: tree-examples.txt  tree-github.txt  tree-src-scaffold-kit-examples.txt  tree.txt
docs_sphinx/: conf.py  index.rst  modules.rst  scaffold_kit.rst  scaffold_kit.utils.rst
docs_sphinx/_static/: README.md
examples/: .scaffoldignore
examples/configs/: .scaffoldignore  scaffoldkitrc.json
examples/scaffold/: scaffold.json  scaffold.yaml
guides/: dynamic-versioning-with-python-quick-setup-guide.html  git-workflow-guide-branches.html
reference/: .buildinfo  .buildinfo.bak  checklist.html  config.html  genindex.html  ignore_parser.html  index.html  main.html  objects.inv  pattern_processor.html  py-modindex.html  scaffold.html  scaffold_kit.cli.html  scaffold_kit.html  scaffold_kit.utils.html  search.html  searchindex.js  string_utils.html  tree.html
reference/.doctrees/: environment.pickle  index.doctree  scaffold_kit.cli.doctree  scaffold_kit.doctree  scaffold_kit.utils.doctree
reference/_modules/: index.html  scaffold_kit.html
reference/_modules/scaffold_kit/: checklist.html  config.html  scaffold.html  tree.html
reference/_modules/scaffold_kit/utils/: ignore_parser.html  pattern_processor.html  string_utils.html
reference/_sources/: index.rst.txt  scaffold_kit.cli.rst.txt  scaffold_kit.rst.txt  scaffold_kit.utils.rst.txt
scripts/: check_version.py
search/: search_index.js  search_index.json
sphinx_source/: conf.py
src/scaffold_kit/: __init__.py  __version__.pyi  checklist.py  config.py  init.py  main.py  scaffold.py  tree.py
src/scaffold_kit/examples/configs/: scaffoldkitrc.yaml
src/scaffold_kit/utils/: ignore_parser.py  pattern_processor.py  string_utils.py
