[project]
name = "scaffold-kit"
version = "0.1.0"
description = "A utility for scaffolding projects from structured data, with complementary tools for generating file checklists and rendering ASCII trees."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Dirk Sidney Jansen", email = "sidisinsane@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
  "prettytable~=3.16.0",
  "pyyaml~=6.0.2",
]
keywords = [
  "scaffolding",
  "project-structure",
  "file-management",
  "directory-tree",
  "cli-tools",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
  "Topic :: System :: Filesystems",
  "Topic :: Utilities",
]

[project.urls]
Homepage      = "https://github.com/sidisinsane/scaffold-kit"
Documentation = "https://github.com/sidisinsane/scaffold-kit#readme"
Repository    = "https://github.com/sidisinsane/scaffold-kit.git"
"Bug Tracker" = "https://github.com/sidisinsane/scaffold-kit/issues"

[project.optional-dependencies]
dev = [
  "pytest~=8.4.1",
  "pytest-cov~=6.2.1",
  "coverage~=7.10.1",
  "ruff~=0.12.5",
  "mypy~=1.17.0",
  "bandit~=1.8.6",
  "pre-commit~=4.2.0",
  "yamllint~=1.37.1",
  "taplo~=0.9.3",
  "pylint~=3.3.8",
]

docs = [
  "sphinx~=8.2.3",
  "sphinx-favicon~=1.0.1",
  "myst-parser~=4.0.1",
  "mkdocs~=1.6.1",
  "mkdocstrings[python]~=0.30.0",
  "mkdocs-gen-files~=0.5.0",
  "mkdocs-material~=9.6.16",
  "mkdocs-nav-weight~=0.2.0",
  "mkdocs-section-index~=0.3.10",
  "pymdown-extensions~=10.16.1",
]

[project.scripts]
scaffold-kit = "scaffold_kit.main:main"

[build-system]
requires      = [ "hatchling", "tomli ; python_version < '3.11'" ]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [ "src/scaffold_kit" ]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
